force-app/main/default/objects/Child_Condition__mdt/Child_Condition__mdt.object-meta.xml
<CustomObject>
    <description>Stores conditions for child objects in validation rules</description>
    <label>Child Condition</label>
    <pluralLabel>Child Conditions</pluralLabel>
</CustomObject>