force-app/main/default/objects/Child_Condition__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Comparison operator for the child object field</description>
    <label>Operator</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>