force-app/main/default/objects/Child_Condition__mdt/fields/Parent_Condition__c.field-meta.xml
<CustomField>
    <fullName>Parent_Condition__c</fullName>
    <description>Parent condition that references the child object</description>
    <label>Parent Condition</label>
    <referenceTo>Condition__mdt</referenceTo>
    <relationshipLabel>Child Object Conditions</relationshipLabel>
    <relationshipName>Child_Object_Conditions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>